# husk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloud-init-hello.yaml  config.example.toml  config.libvirt.example.toml  github-app-plan.md  gpu-passthrough-poc-findings.md  huskci.2026-07-20.private-key.pem  image-pipeline.md  justfile  measure-standup.py  observability.md  phase3-recycle.py  phase3.yml  plan.md  pyproject.toml  targets-and-capacity.md  verify-phase1.py
.github/: dependabot.yml  zizmor.yml
.github/workflows/: build-app-image.yml  build-images.yml  ci.yml
examples/workflows/: gpu-smoke.yml
grafana/: README.md  husk.json
images/: build.sh  versions.env
images/files/: 90-husk-datasource.cfg  containers.conf  docker  earlyoom.default  husk-bootreport  husk-bootreport.service  husk-cdi.service  husk-docker-sock.conf  husk-node-exporter.service  husk-poweroff.service  husk-runner.service  nvidia-container-toolkit.repo  storage.conf
k8s/: README.md
k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
k8s/overlays/cern/: config.example.toml  kustomization.yaml  pvc.yaml  route.yaml
k8s/overlays/local/: config.example.toml  kustomization.yaml  namespace.yaml
scripts/: build-golden-image.sh  host-setup.md  openstack-whoami.py  smoke_github_app.py  smoke_libvirt.py
src/husk/: __init__.py  aio.py  appauth.py  backend.py  bootreport.py  cli.py  cloudinit.py  config.py  controller.py  demand.py  discovery.py  fake_backend.py  ghhttp.py  github.py  guest_scrape.py  http_server.py  image_sync.py  labels.py  libvirt_backend.py  libvirt_xml.py  lock.py  metrics.py  metrics_store.py  multipool.py  openstack_backend.py  ops.py  poller.py  slot.py  snapshot.py  storage.py  target.py  timing.py
src/husk/files/: cloud-init.yaml.j2  husk-egress.nft  husk-egress.nft.j2
src/husk/web/: __init__.py  app.py
src/husk/web/templates/: base.html  dashboard.html
tests/: conftest.py  golden_cases.py  test_appauth.py  test_bootreport.py  test_bounded_creates.py  test_classifier.py  test_cli_entrypoint.py  test_cli_multipool.py  test_cli_recycle.py  test_cloudinit.py  test_cloudinit_gpu.py  test_cloudinit_metrics.py  test_cloudinit_prebaked.py  test_config.py  test_config_reload.py  test_cvmfs.py  test_demand.py  test_discovery.py  test_egress_allow.py  test_failsafe.py  test_github.py  test_guest_scrape.py  test_http_server.py  test_husk_bootreport.py  test_image_drain.py  test_image_sync.py  test_labels.py  test_libvirt_connect.py  test_libvirt_image_sync.py  test_libvirt_xml.py  test_locking.py  test_metrics.py  test_metrics_instrumentation.py  test_metrics_store.py  test_multipool.py  test_openstack_fixed_ip.py  test_openstack_image_sync.py  test_openstack_pool_scoping.py  test_openstack_warnings.py  test_ops.py  (+10 more)
tests/golden/: allow.yaml  cvmfs.yaml  cvmfs_direct.yaml  env.yaml  everything.yaml  gpu.yaml  memory.yaml  metrics.yaml  metrics_v6.yaml  plain.yaml  regen.py
