[project]
name = "husk"
version = "0.1.0"
description = "Ephemeral GitHub Actions runners on CERN OpenStack (controller)"
requires-python = ">=3.11"
dependencies = [
    "openstacksdk",
    "requests",
    "typer>=0.12",
    "pydantic-settings>=2",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest", "ruff>=0.15"]
# libvirt backend — kept optional so the OpenStack/CI path needs no libvirt headers.
# `oras` is the pure-Python OCI client used to pull golden images (no oras CLI dep).
libvirt = ["libvirt-python>=10", "oras>=0.2"]

[project.scripts]
huskd = "husk.cli:huskd"
huskctl = "husk.cli:huskctl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/husk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
