[project]
name = "husk"
version = "0.1.0"
description = "Ephemeral GitHub Actions runners on CERN OpenStack (controller)"
requires-python = ">=3.11"
dependencies = [
    "openstacksdk",
    "requests",
    "typer>=0.12",
    "pydantic-settings>=2",
    "rich>=13",
    # Pure-Python OCI client for pulling golden VM images (no oras CLI dep). Shared
    # by BOTH backends now — the controller pulls one qcow2 and fans it to libvirt
    # hosts *and* uploads it to Glance — so it lives in base deps, not an extra.
    "oras>=0.2",
    # Retry/backoff for the in-process async-op registry (husk.ops) that runs the
    # slow image staging off the reconcile thread — replaces hand-rolled backoff.
    "tenacity>=8.2",
    # huskd's single HTTP surface (dashboard + /status /metrics /healthz /events).
    # Quart owns the event loop; the reconcile loop runs in a background thread.
    # hypercorn is the ASGI server Quart's run_task drives.
    "quart>=0.19",
    "hypercorn>=0.16",
]

[project.optional-dependencies]
dev = ["pytest", "ruff>=0.15"]
# libvirt backend — kept optional so the OpenStack/CI path needs no libvirt headers.
libvirt = ["libvirt-python>=10"]

[project.scripts]
huskd = "husk.cli:huskd"
huskctl = "husk.cli:huskctl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/husk"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
